Extend property of Lasso select tool in Node editor does not work #54336

Closed
opened 2018-03-16 12:22:50 +01:00 by Ludvik Koutny · 11 comments
Contributor

System Information
Windows 10, GTX1080Ti

Blender Version
Broken: 2.79a
Worked: Probably never

Short description of error
Extend property of Lasso select tool in Node editor section of input mapping preferences has no effect. When disabled, lasso selection still remains additive.
Extend.PNG

EDIT:
It appears same is the case for Mask Editing mode of UV/Image editor.

**System Information** Windows 10, GTX1080Ti **Blender Version** Broken: 2.79a Worked: Probably never **Short description of error** Extend property of Lasso select tool in Node editor section of input mapping preferences has no effect. When disabled, lasso selection still remains additive. ![Extend.PNG](https://archive.blender.org/developer/F2445960/Extend.PNG) EDIT: It appears same is the case for Mask Editing mode of UV/Image editor.
Author
Contributor

Added subscriber: @Rawalanche

Added subscriber: @Rawalanche
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2018-04-23 15:10:16 +02:00
Member

Can confirm this, atm. this is just not implemented, but is a nice TODO.

Will look at this shortly.

Can confirm this, atm. this is just not implemented, but is a nice TODO. Will look at this shortly.

This issue was referenced by d78894eb3e

This issue was referenced by d78894eb3e1bffd05eaa9b7a6dc322923d5cf7c1

This issue was referenced by 54f2e58452

This issue was referenced by 54f2e58452bba1db8c50d26ca6999473fa45809d
Member

D3360 should do it for the Node Editor, will look into Mask shortly

[D3360](https://archive.blender.org/developer/D3360) should do it for the Node Editor, will look into Mask shortly
Member

D3361 should do it for Masks

[D3361](https://archive.blender.org/developer/D3361) should do it for Masks
Author
Contributor

I would strongly suggest to have just one global border and lasso selection implementation which is referenced by all the editors, rather than having unique implementation for each editor and trying to keep its codebase manually in sync. There are quite a few more inconsistencies of lasso and border selection keymap properties between the different editor. This bug report is just a small example of it.

I would strongly suggest to have just one global border and lasso selection implementation which is referenced by all the editors, rather than having unique implementation for each editor and trying to keep its codebase manually in sync. There are quite a few more inconsistencies of lasso and border selection keymap properties between the different editor. This bug report is just a small example of it.
Member

@Rawalanche: could you report the other inconsistencies as well? (just post into this report, I'll take care of them -- and see if it makes sense generalize some code here)

@Rawalanche: could you report the other inconsistencies as well? (just post into this report, I'll take care of them -- and see if it makes sense generalize some code here)
Author
Contributor

In #54336#502722, @lichtwerk wrote:
@Rawalanche: could you report the other inconsistencies as well? (just post into this report, I'll take care of them -- and see if it makes sense generalize some code here)

Will do, but doing inspection of the entire input editor takes a while, so it won't be sooner than in a few days :)

> In #54336#502722, @lichtwerk wrote: > @Rawalanche: could you report the other inconsistencies as well? (just post into this report, I'll take care of them -- and see if it makes sense generalize some code here) Will do, but doing inspection of the entire input editor takes a while, so it won't be sooner than in a few days :)
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#54336
No description provided.