Fix T54336: Extend property of Lasso select tool in Node editor does not work

Reviewed By: campbellbarton

Differential Revision: https://developer.blender.org/D3360